Force mono sounds. Manual changes. New module diagram.

--- a/Manual/CombinationLock.html
+++ b/Manual/CombinationLock.html
@@ -23,8 +23,8 @@
 					This looks like a combination lock. I thought I was disarming this bomb, not unlocking it.
 			</p>
 			<p class="appendix-reference">
-			See Appendix B of original manual for battery identification reference.
-			See Appendix K for two factor identification reference.
+			See Appendix B of original manual for battery identification reference.<br>
+			See Appendix Two Factor for two factor identification reference.
 			</p>
 
 			<p>Like a typical combination lock, this requires 3 numbers to unlock. Turn the dial to the right to the first number. Then turn it to the left for the second number.
